--- a/MinkNotas/src/main/resources/Francisco/MinkNotas/MinkNotas/primary.fxml
+++ b/MinkNotas/src/main/resources/Francisco/MinkNotas/MinkNotas/primary.fxml
@@ -1,16 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Francisco.MinkNotas.MinkNotas.PrimaryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Francisco.MinkNotas.MinkNotas.PrimaryController">
    <children>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
+      <SplitPane dividerPositions="0.6313131313131313" layoutX="177.0" layoutY="120.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <TableView fx:id="tablauser" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="idColumna" prefWidth="88.0" text="ID" />
+                      <TableColumn fx:id="nombreColumna" prefWidth="95.0" text="Nombre" />
+                        <TableColumn fx:id="edadColumna" prefWidth="82.0" text="EDAD" />
+                        <TableColumn fx:id="dniColumna" prefWidth="109.0" text="DNI" />
+                    </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Label layoutX="27.0" layoutY="14.0" text="Nombre" />
+                  <Label layoutX="27.0" layoutY="77.0" text="Edad" />
+                  <Label layoutX="30.0" layoutY="139.0" text="DNI" />
+                  <TextField layoutX="27.0" layoutY="41.0" prefHeight="25.0" prefWidth="160.0" />
+                  <TextField layoutX="27.0" layoutY="102.0" prefHeight="25.0" prefWidth="160.0" />
+                  <TextField layoutX="27.0" layoutY="164.0" prefHeight="25.0" prefWidth="160.0" />
+                  <Button layoutX="45.0" layoutY="217.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Añadir" />
+                  <Button layoutX="45.0" layoutY="267.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Modificar" />
+                  <Button layoutX="45.0" layoutY="317.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Eliminar" />
+               </children></AnchorPane>
+        </items>
+      </SplitPane>
    </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</VBox>
+</AnchorPane>
