--- a/MinkNotas/src/main/resources/Francisco/MinkNotas/MinkNotas/secondary.fxml
+++ b/MinkNotas/src/main/resources/Francisco/MinkNotas/MinkNotas/secondary.fxml
@@ -1,16 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Francisco.MinkNotas.MinkNotas.SecondaryController">
-    <children>
-        <Label text="Secondary View" />
-        <Button fx:id="secondaryButton" text="Switch to Primary View" onAction="#switchToPrimary" />
-    </children>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="503.0" prefWidth="945.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Francisco.MinkNotas.MinkNotas.SecondaryController">
+   <children>
+      <SplitPane dividerPositions="0.6313131313131313" layoutX="177.0" layoutY="120.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <TableView fx:id="tablanotas" layoutY="21.0" prefHeight="501.0" prefWidth="592.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="idColumna" prefWidth="96.0" text="ID" />
+                      <TableColumn fx:id="nombreColumna" prefWidth="108.0" text="Nombre" />
+                        <TableColumn fx:id="FechaCreacionColumna" prefWidth="117.0" text="FechaCreacion" />
+                        <TableColumn fx:id="ContenidoColumna" prefWidth="182.0" text="Contenido" />
+                        <TableColumn fx:id="id_UsuarioColumna" prefWidth="88.0" text="ID_Usuario" />
+                    </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="511.0" prefWidth="0.0">
+               <children>
+                  <Label layoutX="25.0" layoutY="6.0" text="Nombre" />
+                  <Label layoutX="25.0" layoutY="48.0" text="Fecha" />
+                  <Label layoutX="28.0" layoutY="106.0" text="Contenido" />
+                  <TextField fx:id="nombreTF" layoutX="23.0" layoutY="23.0" prefHeight="25.0" prefWidth="160.0" />
+                  <TextField fx:id="contenidoTF" layoutX="23.0" layoutY="123.0" prefHeight="25.0" prefWidth="160.0" />
+                  <Button fx:id="aniadirBT" layoutX="197.0" layoutY="304.0" mnemonicParsing="false" onAction="#aniadir" prefHeight="25.0" prefWidth="116.0" text="Añadir" />
+                  <Button layoutX="41.0" layoutY="353.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Modificar" />
+                  <Button fx:id="eliminarBT" layoutX="203.0" layoutY="353.0" mnemonicParsing="false" onAction="#eliminar" prefHeight="25.0" prefWidth="116.0" text="Eliminar" />
+                  <Button fx:id="verusuariosBT" layoutX="41.0" layoutY="304.0" mnemonicParsing="false" onAction="#switchToPrimary" prefHeight="25.0" prefWidth="116.0" text="Usuarios" />
+                  <DatePicker fx:id="fechaDP" layoutX="23.0" layoutY="71.0" />
+                  <Label layoutX="50.0" layoutY="378.0" text="MINK">
+                     <font>
+                        <Font size="48.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="156.0" layoutY="431.0" text="NOTAS">
+                     <font>
+                        <Font size="48.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="27.0" layoutY="157.0" text="IdUsuario" />
+                  <TextField fx:id="idusuarioTF" layoutX="24.0" layoutY="184.0" prefHeight="25.0" prefWidth="160.0" />
+                  <Button fx:id="refresthBT" layoutX="255.0" layoutY="11.0" mnemonicParsing="false" onAction="#switchToSecondary" prefHeight="25.0" prefWidth="56.0" text="Refresh" />
+                  <Label layoutX="27.0" layoutY="216.0" text="Label" />
+                  <TextField layoutX="24.0" layoutY="244.0" prefHeight="25.0" prefWidth="160.0" />
+               </children></AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
+</AnchorPane>
